--- a/configs/structured.yaml
+++ b/configs/structured.yaml
@@ -1,13 +1,13 @@
 model:
-  method: structured
-  name: Baseline
-  kwargs:
-    geo_dim: 2
-    param_dim: 2
-    latent_dim: 32
-    out_dim: 3
+  geo_dim: 2
+  param_dim: 2
+  latent_dim: 256
+  out_dim: 3
 data:
-  dataset: structured 
-  data_dir: ./data/official/npy
-  plotter: structured
+  data_dir: './data/npy'
+  batch_size: 32
+training:
+  max_epochs: 1500
+  check_val_every_n_epoch: 10
+  auto_lr_find: False
   
